--- a/motd.html
+++ b/motd.html
@@ -5,7 +5,7 @@
   <title>Macaulay Culkin's Wonderland</title>
   <style>
     body {
-      background-color: #0d0d0d;
+      background-color: #0a0a0a;
       color: #f0f0f0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 40px auto;
@@ -13,12 +13,37 @@
       line-height: 1.6;
     }
 
-    h1, h2, h3, h4 {
-      color: #ff66c4;
+    h1 {
+      font-size: 2.5em;
+      color: #ff5ae6;
+      text-align: center;
+    }
+
+    .rainbow {
+      font-weight: bold;
+      font-size: 1.4em;
+      text-align: center;
+      animation: rainbow 5s infinite linear;
+    }
+
+    @keyframes rainbow {
+      0% { color: red; }
+      16% { color: orange; }
+      32% { color: yellow; }
+      48% { color: lime; }
+      64% { color: cyan; }
+      80% { color: violet; }
+      100% { color: red; }
+    }
+
+    h2 {
+      color: #00ffff;
+      margin-top: 40px;
     }
 
     a {
-      color: #00ffff;
+      color: #00ff88;
+      font-weight: bold;
       text-decoration: none;
     }
 
@@ -32,101 +57,74 @@
       margin: 30px 0;
     }
 
+    .quote {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 1.8em;
+      font-style: italic;
+      color: #f54291;
+      text-shadow: 0 0 10px #ff00ff;
+    }
+
     ul {
       padding-left: 20px;
     }
 
     code {
       background-color: #222;
-      padding: 2px 6px;
+      padding: 4px 8px;
       border-radius: 4px;
       font-family: monospace;
-    }
-
-    .section {
-      margin-bottom: 40px;
     }
   </style>
 </head>
 <body>
 
-  <h1>🌌 Welcome to <strong>Macaulay Culkin's Wonderland</strong></h1>
-  <h4><em>"You are not safe. You were never safe."</em></h4>
+  <h1>Welcome to Macaulay Culkin's Wonderland</h1>
+  <p class="rainbow">"You are not safe. You were never safe"</p>
 
   <hr>
 
-  <div class="section">
-    <h2>🎮 About the Server</h2>
-    <p>This isn't your grandma’s Garry’s Mod server.<br>
-    You're being hunted — constantly. By <strong>Shrek</strong>. And <strong>Grimace</strong>.<br>
-    You don't fight back. You <strong>run</strong>.</p>
+  <h2>Welcome to the Shitshow Retards:</h2>
+  <p>
+    If you're seeing this screen, congratulations — you've managed to get past the loading screen and successfully downloaded 134 workshop items that are probably 15GB.  
+    There definitely isn't a trojan horse embedded in any of them.  
+    The swamp is hungry and it's feeding time for Shrek.  
+    Remember, when running from a bear you don't have to be faster than the bear, just faster than the person you're running with.
+  </p>
 
-    <p>A custom gamemode forged in chaos, built for those who laugh in the face of danger...<br>
-    …and cry when they see Shrek round a corner at 60 MPH.</p>
+  <hr>
+
+  <h2>❗ RULES:</h2>
+  <ul>
+    <li>You must be baked upon entry of the server (or soon after)</li>
+    <li>No blacks allowed</li>
+    <li>Every crash is Ron's fault, I blame Ron</li>
+    <li>Shrek is love, Shrek is life</li>
+  </ul>
+
+  <hr>
+
+  <h2>📁 Workshop Content:</h2>
+  <p>This should have all downloaded automatically upon joining...</p>
+  <p>👉 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2995256213" target="_blank">But you can click here to download the workshop items manually</a></p>
+
+  <hr>
+
+  <h2>🤑 Free Bitcoin?</h2>
+  <p>Yes. Absolutely. Free BTC. No catch.<br>
+  Just click below and enjoy your new riches.</p>
+  <p>👉 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">claim your free BTC here!</a></p>
+
+  <hr>
+
+  <h2>📄 Donations?</h2>
+  <p>I'm poor. Send me your entire net worth in Bitcoin:<br>
+  <strong>BTC Wallet:</strong> <code>1FakeBTCWalletThatTotallyExists1337</code></p>
+
+  <div class="quote">
+    "Family" ~ Vin Diesel, 1983
   </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>⚠️ Rules</h2>
-    <p>There are no rules.<br>
-    Just run.</p>
-
-    <p>But seriously:</p>
-    <ul>
-      <li>Don’t be a tool.</li>
-      <li>Don’t ruin the experience for others.</li>
-      <li>Exploits will get you banned faster than Shrek can snap your neck.</li>
-    </ul>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>🧠 Server Admin</h2>
-    <ul>
-      <li>👑 <strong>Macaulay Culkin</strong> – [Not the real one… or is it?]</li>
-    </ul>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>🧰 Workshop Content</h2>
-    <p>You’ll need the required content or things will look like soup:<br>
-    👉 <a href="PASTE_YOUR_WORKSHOP_LINK_HERE" target="_blank">Click here for the required Workshop collection</a></p>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>🤑 Free Bitcoin?</h2>
-    <p>Yes. Absolutely. Free BTC. No catch.<br>
-    Just click below and enjoy your new riches.</p>
-    <p>👉 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><strong>Claim your free Bitcoin here</strong></a></p>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>🧾 Donations</h2>
-    <p>Want to donate? Send me your entire net worth in Bitcoin:<br>
-    <strong>BTC Wallet:</strong> <code>1FakeBTCWalletThatTotallyExists1337</code></p>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <h2>💀 Final Thoughts</h2>
-    <p>If you hear <strong>All Star</strong> echoing down the hallway… it's already too late.</p>
-
-    <p>Welcome to the Wonderland.<br>
-    Now run.</p>
-  </div>
-
-  <hr>
-
-  <p><em>Powered by fear. Fueled by memes. Built for chaos.</em></p>
 
 </body>
 </html>
