--- a/motd.html
+++ b/motd.html
@@ -5,18 +5,28 @@
   <title>Macaulay Culkin's Wonderland</title>
   <style>
     body {
-      background-color: #0a0a0a;
+      background: url('https://imagizer.imageshack.com/img923/8297/g9MvtF.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: #f0f0f0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 40px auto;
+      margin: 0;
+      padding: 0;
+    }
+
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.7); /* dark transparent overlay */
+      padding: 40px;
       max-width: 800px;
+      margin: auto;
       line-height: 1.6;
+      box-shadow: 0 0 20px #000;
     }
 
     h1 {
       font-size: 2.5em;
       color: #ff5ae6;
       text-align: center;
+      text-shadow: 2px 2px 6px black;
     }
 
     .rainbow {
@@ -24,6 +34,7 @@
       font-size: 1.4em;
       text-align: center;
       animation: rainbow 5s infinite linear;
+      text-shadow: 2px 2px 6px black;
     }
 
     @keyframes rainbow {
@@ -39,6 +50,7 @@
     h2 {
       color: #00ffff;
       margin-top: 40px;
+      text-shadow: 1px 1px 5px black;
     }
 
     a {
@@ -53,17 +65,8 @@
 
     hr {
       border: none;
-      border-top: 1px solid #444;
+      border-top: 1px solid #666;
       margin: 30px 0;
-    }
-
-    .quote {
-      margin-top: 60px;
-      text-align: center;
-      font-size: 1.8em;
-      font-style: italic;
-      color: #f54291;
-      text-shadow: 0 0 10px #ff00ff;
     }
 
     ul {
@@ -76,54 +79,65 @@
       border-radius: 4px;
       font-family: monospace;
     }
+
+    .quote {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 1.8em;
+      font-style: italic;
+      color: #f54291;
+      text-shadow: 0 0 10px #ff00ff;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Welcome to Macaulay Culkin's Wonderland</h1>
-  <p class="rainbow">"You are not safe. You were never safe"</p>
+  <div class="overlay">
+    <h1>Welcome to Macaulay Culkin's Wonderland</h1>
+    <p class="rainbow">"You are not safe. You were never safe"</p>
 
-  <hr>
+    <hr>
 
-  <h2>Welcome to the Shitshow Retards:</h2>
-  <p>
-    If you're seeing this screen, congratulations — you've managed to get past the loading screen and successfully downloaded 134 workshop items that are probably 15GB.  
-    There definitely isn't a trojan horse embedded in any of them.  
-    The swamp is hungry and it's feeding time for Shrek.  
-    Remember, when running from a bear you don't have to be faster than the bear, just faster than the person you're running with.
-  </p>
+    <h2>Welcome to the Shitshow Retards:</h2>
+    <p>
+      If you're seeing this screen, congratulations — you've managed to get past the loading screen and successfully downloaded 134 workshop items that are probably 15GB.  
+      There definitely isn't a trojan horse embedded in any of them.  
+      The swamp is hungry and it's feeding time for Shrek.  
+      Remember, when running from a bear you don't have to be faster than the bear, just faster than the person you're running with.
+    </p>
 
-  <hr>
+    <hr>
 
-  <h2>❗ RULES:</h2>
-  <ul>
-    <li>You must be baked upon entry of the server (or soon after)</li>
-    <li>No blacks allowed</li>
-    <li>Every crash is Ron's fault, I blame Ron</li>
-    <li>Shrek is love, Shrek is life</li>
-  </ul>
+    <h2>❗ RULES:</h2>
+    <ul>
+      <li>You must be baked upon entry of the server (or soon after)</li>
+      <li>No blacks allowed</li>
+      <li>Every crash is Ron's fault, I blame Ron</li>
+      <li>Shrek is love, Shrek is life</li>
+    </ul>
 
-  <hr>
+    <hr>
 
-  <h2>📁 Workshop Content:</h2>
-  <p>This should have all downloaded automatically upon joining...</p>
-  <p>👉 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2995256213" target="_blank">But you can click here to download the workshop items manually</a></p>
+    <h2>📁 Workshop Content:</h2>
+    <p>This should have all downloaded automatically upon joining...</p>
+    <p>👉 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2995256213" target="_blank">But you can click here to download the workshop items manually</a></p>
 
-  <hr>
+    <hr>
 
-  <h2>🤑 Free Bitcoin?</h2>
-  <p>Yes. Absolutely. Free BTC. No catch.<br>
-  Just click below and enjoy your new riches.</p>
-  <p>👉 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">claim your free BTC here!</a></p>
+    <h2>🤑 Free Bitcoin?</h2>
+    <p>Yes. Absolutely. Free BTC. No catch.<br>
+    Just click below and enjoy your new riches.</p>
+    <p>👉 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">claim your free BTC here!</a></p>
 
-  <hr>
+    <hr>
 
-  <h2>📄 Donations?</h2>
-  <p>I'm poor. Send me your entire net worth in Bitcoin:<br>
-  <strong>BTC Wallet:</strong> <code>1FakeBTCWalletThatTotallyExists1337</code></p>
+    <h2>📄 Donations?</h2>
+    <p>I'm poor. Send me your entire net worth in Bitcoin:<br>
+    <strong>Cash App:</strong> <code>$Legomaniac359</code></p>
 
-  <div class="quote">
-    "Family" ~ Vin Diesel, 1983
+    <div class="quote">
+      "Family" ~ Vin Diesel, 1983
+    </div>
   </div>
 
 </body>
