--- a/motd.html
+++ b/motd.html
@@ -5,7 +5,7 @@
   <title>Macaulay Culkin's Wonderland</title>
   <style>
     body {
-      background: url('https://imagizer.imageshack.com/img923/9022/cz49wp.jpg') no-repeat center center fixed;
+      background: url('https://imagizer.imageshack.com/img924/3082/TVC6ri.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #f0f0f0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -142,4 +142,5 @@
 
 </body>
 </html>
+
 
