--- a/motd.html
+++ b/motd.html
@@ -7,6 +7,7 @@
     body {
       background: url('https://imagizer.imageshack.com/img924/3082/TVC6ri.jpg') no-repeat center center fixed;
       background-size: cover;
+      background-position: center;
       color: #f0f0f0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -142,5 +143,6 @@
 
 </body>
 </html>
+
 
 
