--- a/motd.html
+++ b/motd.html
@@ -58,6 +58,9 @@
       color: #00ff88;
       font-weight: bold;
       text-decoration: none;
+      pointer-events: auto;
+      cursor: pointer;
+      user-select: text;
     }
 
     a:hover {
@@ -143,6 +146,7 @@
 
 </body>
 </html>
+
 
 
 
